--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.google.firebase:firebase-database:11.0.2'
+    compile 'com.google.firebase:firebase-config:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:multidex:1.0.0'
