--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,6 +21,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".SignUpActivity"/>
         <activity android:name=".PhoneActivity" />
         <activity android:name=".RealtimeDb" />
         <activity android:name=".StorageActivity" />
